--- a/Home.html
+++ b/Home.html
@@ -4,5 +4,8 @@
     </title>
     <body>
         <h1>Hello,This is Home Page</h1>
+
+        <h2>Second Title</h2>
+        <input type="text" name="nametxt">
     </body>
 </html>
