--- a/Home.html
+++ b/Home.html
@@ -6,6 +6,8 @@
         <h1>Hello,This is Home Page</h1>
 
         <h2>Second Title</h2>
-        <input type="text" name="nametxt">
+        <input type="text" name="nametxt
+                                 
+        <input type="submit" name="click">
     </body>
 </html>
